force-app/main/default/objects/Loan__c/fields/Assert_Cost__c.field-meta.xml
<CustomField>
    <fullName>Assert_Cost__c</fullName>
    <label>Assert Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>