force-app/main/default/objects/Loan__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Customer__r.Name + &apos; &apos; +  Customer__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>