force-app/main/default/objects/Loan__c/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <formula>Customer__r.Salary__c * 20 * 0.60

/* 60% of Salary, 20 times*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>