force-app/main/default/objects/Loan__c/fields/No_of_EMI_s__c.field-meta.xml
<CustomField>
    <fullName>No_of_EMI_s__c</fullName>
    <formula>CASE(Type_Of_Loan__c , 
       &apos;Education&apos;, 48,
       &apos;Housing&apos;, 120,
       &apos;Personal&apos;, 32,
        0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of EMI&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>