force-app/main/default/objects/Loan__c/fields/Type_Of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Loan__c</fullName>
    <label>Type Of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>