force-app/main/default/objects/Loan__c/validationRules/LastName_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>LastName_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Last_Name__c )</errorConditionFormula>
    <errorMessage>LastName cannot be blank</errorMessage>
</ValidationRule>