force-app/main/default/objects/Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applied_Amount__c</columns>
    <columns>Customer__c</columns>
    <columns>Type_Of_Loan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>